# RTnn

./: .gitignore  .lsm_training_LSTM_64_2_nmse_bs_16_tb_1_17023294.err.swp  .lsm_training_LSTM_64_2_nmse_bs_16_tb_1_17024604.err.swp  .readthedocs.yaml  LICENSE  README.rst  arch-nvhpc_LEONARDO.env  atm_benchmark.html  bash.sh  bash_inference.sh  data_handling.html  experiments.html  generate_jobs.sh  genindex.html  index.html  inference_gru.sh  inference_modes.html  installation.html  lsm_benchmark.html  lsm_training.err  lsm_training.out  lsm_training_16417203.err  lsm_training_16417203.out  lsm_training_16426212.err  lsm_training_16426212.out  lsm_training_16446836.err  lsm_training_16446836.out  lsm_training_16786685.err  lsm_training_16786685.out  lsm_training_16787560.err  lsm_training_16787560.out  lsm_training_16939236.err  lsm_training_16939236.out  lsm_training_16940687.err  lsm_training_16940687.out  lsm_training_16940696.err  lsm_training_16940696.out  lsm_training_16940739.err  lsm_training_16940739.out  lsm_training_16941408.err  (+72 more)
.github/workflows/: ci.yaml  docs.yml
_modules/: index.html
_modules/rtnn/: dataset.html  dataset_atm.html  diagnostics.html  evaluater.html  logger.html  main.html  model_loader.html  model_utils.html  utils.html  version.html
_modules/rtnn/models/: DimChangeModule.html  Transformer.html  fcn.html  mlp.html  pinn.html  rnn.html  transformer.html
_sources/: data_handling.rst.txt  experiments.rst.txt  index.rst.txt  installation.rst.txt  overview.rst.txt  project_structure.rst.txt  quickstart.rst.txt  testing_philosophy.rst.txt  training_strategy.rst.txt
_sources/api/: modules.rst.txt  rtnn.models.rst.txt  rtnn.rst.txt
api/: modules.html  rtnn.html  rtnn.models.html
docs/: Makefile  requirements.txt
docs/source/: atm_benchmark.rst  conf.py  experiments.rst  index.rst  inference_modes.rst  installation.rst  lsm_benchmark.rst  neural_architectures.rst  overview.rst  pre_push_workflow.rst  project_structure.rst  quickstart.rst  ref_trans_benchmark.rst  testing_philosophy.rst  training_strategy.rst
docs/source/api/: rtnn.models.rst  rtnn.rst
docs/stats/: stat_log.txt
shs/: bash_cp.sh  bash_gru.sh  bash_inference.sh  bash_inference_gru.sh  run_script_inference_lsm.sh  run_script_lsm.sh  run_script_lsm_LSTM_96_2_nmse_bs_16_tb_1.sh  run_script_lsm_cp.sh  sbatch_script_GRU_64_2_nmse_bs_16_tb_1.sh  sbatch_script_LSTM_64_2_nmse_bs_16_tb_1.sh  sbatch_script_LSTM_96_2_nmse_bs_16_tb_1.sh
src/: .data_helper_lsm.py.swp  .main_lsm.py.swo  .model_helper.py.swp  ConvLSTM1D.py  DimChangeModule.py  FullyConnectedNet.py  Transformer.py  Transformer_new.py  UNet1D.py  config.py  data_helper.py  data_helper_lsm.py  evaluate_helper.py  fcn.py  inference.py  inference_lsm.py  main.py  main_lsm.py  model_helper.py  model_prepare.py  my_transformer_encoder.py  plot_helper.py  rnn.py  stats.py
src/rtnn/: __init__.py  __main__.py  data_helper_lsm.py  dataset.py  dataset_atm.py  dataset_reftrans.py  diagnostics.py  evaluate_helper.py  evaluater.py  file_helper.py  logger.py  main.py  main_lsm.py  model_helper.py  model_loader.py  model_prepare.py  model_utils.py  plot_helper.py  stats.py  utils.py  version.py
src/rtnn/models/: DimChangeModule.py  Transformer.py  UNet1D.py  __init__.py  fcn.py  mlp.py  pinn.py  rnn.py  transformer.py
stats/: stat_log.txt
tests/: test_dataset.py  test_diagnostics.py  test_evaluater.py  test_fcn.py  test_logger.py  test_mlp.py  test_model_loader.py  test_model_utils.py  test_rnn.py  test_runner.py  test_transformer.py  test_utils.py
