[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtnn"
version = "0.1.0"
requires-python = ">=3.9"
license = { file = "LICENSE" }
description = "RTnn: Radiative Transfer Neural Networks for Climate Science"
authors = [{ name = "Kazem Ardaneh", email = "kardaneh@ipsl.fr" }]
readme = "README.rst"

dependencies = [
    # "torch>=2.0.0",        # Commented out - provided by modules
    # "numpy",                # Commented out - provided by modules
    # "matplotlib",           # Commented out - provided by modules
    # "scipy>=1.10.1",        # Commented out - provided by modules
    # "pandas>=2.0.3",        # Commented out - provided by modules
    "xarray>=2023.1.0",       # Not in modules - needed
    # "tqdm>=4.65.1",         # Commented out - provided by modules
    # "tensorboard>=2.14.0",  # Commented out - provided by modules
    # "scikit-learn>=1.3.2",  # Commented out - provided by modules
    "netcdf4>=1.7.2",         # Not in modules - needed
    "h5netcdf>=1.1.0",        # Not in modules - needed
    # "seaborn>=0.13.2",      # Commented out - provided by modules
    # "rich>=13.0.0",         # Commented out - provided by modules
    "mpltex>=0.7",            # Not in modules - needed
]

[project.scripts]
rtnn = "rtnn.main_lsm:main"

[project.urls]
Source = "https://github.com/kardaneh/RTNN"

[tool.hatch.build.targets.wheel]
packages = ["src/rtnn"]

[tool.hatch.build]
include = [
    "src/rtnn/**/*",
    "LICENSE",
    "README.rst",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.15.0",
]

docs = [
    "docutils>=0.19",  # Add this first - critical for myst-parser
    "myst-parser>=2.0.0,<3.0.0",  # Use version 2.x instead of 3.x
    "sphinx>=7.2.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

ci = [
    "torch>=2.0.0",
    "numpy",
    "matplotlib",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "xarray>=2023.1.0",
    "netcdf4>=1.7.2",
    "h5netcdf>=1.1.0",
    "tqdm>=4.65.1",
    "tensorboard>=2.14.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "rich>=13.0.0",
    "mpltex>=0.7",
]
